# nged-substation-forecasting

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  LICENSE  README.md  main.py  pyproject.toml  test_data_nged.py
src/nged_substation_forecast/: __init__.py  definitions.py
src/nged_substation_forecast/defs/: __init__.py  nged_assets.py
tests/: __init__.py
