# --- PROJECT CONFIGURATION --- #

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "nged-substation-forecast"
version = "0.0.1"
description = "Forecast net demand at primary, BSP, and GSP substations, and split the forecast into gross demand, solar, and wind per substation for National Grid Electricity Distribution (NGED)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.14"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dagster>=1.12.11",
    "dagster-webserver>=1.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"pre-commit>=4.5.1",
	"pytest>=9.0.2",
	"ruff>=0.14.13",
	"ty>=0.0.13",
	"unittest-xml-reporting>=4.0.0",
]

[project.urls]
repository = "https://github.com/openclimatefix/nged-substation-forecast"

# --- UV WORKSPACE CONFIG ---
# See: https://docs.astral.sh/uv/concepts/projects/workspaces

[tool.uv.workspace]
members = ["packages/*"]

[tool.dagster]
module_name = "nged_substation_forecast.definitions"

# --- LINTING AND TYPING CONFIGURATION --- #

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

